Fix Language selection popup z-index issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,10 @@
   color: white;
 }
 
+.language-selector-popper-container {
+  z-index: 10;
+}
+
 .language-selector-popper {
   padding: 15px;
 }
